--- a/main.html
+++ b/main.html
@@ -128,28 +128,28 @@
 	<div class="section sec-bg02" id="section2">
 		<div class="sec-txt-wrap">
 			<h2>Project</h2>
-			<p class="sec-sub-txt">Innovative technologies are transforming the future of mobility.</p>
+			<p class="sec-sub-txt">다양한 프로젝트를 경험 했습니다.</p>
 			<a href="sub.html" class="btn-classic">Read More<span></span></a>
 			<div class="sec-link-area">
 				<div class="sec-box04">
-					<a href="sub_detail.html">
-						<p class="tit">Mega English</p>
-						<p class="sub-txt">메가잉글리쉬/메가HRD 사이트 리뉴얼 프로젝트</p>
-						<p class="sub-txt">S2 publishing<br/>2013.02 - 2013.05</p>
+					<a href="sub_detail11.html">
+						<p class="tit">LG</p>
+						<p class="sub-txt">Lg 모니터 화면검사 자동화 시스템 개발</p>
+						<p class="sub-txt">amoeba<br/>2020.04 - 2020.06</p>
 					</a>
 				</div>
 				<div class="sec-box05">
-					<a href="sub_detail02.html">
-						<p class="tit">SamSung Card</p>
-						<p class="sub-txt">삼성카드 운영</p>
-						<p class="sub-txt">S2 publishing<br/>2013.06 - 2014.08</p>
+					<a href="sub_detail10.html">
+						<p class="tit">B tv</p>
+						<p class="sub-txt">Btv Plus 모바일 개발</p>
+						<p class="sub-txt">amoeba<br/>2020.05 - 2020.05</p>
 					</a>
 				</div>
 				<div class="sec-box06">
-					<a href="sub_detail03.html">
-						<p class="tit">new KT.com</p>
-						<p class="sub-txt">new KT.com 리뉴얼</p>
-						<p class="sub-txt">amoeba<br/>2017.02 - 2017.10</p>
+					<a href="sub_detail09.html">
+						<p class="tit">LG</p>
+						<p class="sub-txt">LG 세탁기연구개발 platform 개발</p>
+						<p class="sub-txt">amoeba<br/>2020.02 - 2020.03</p>
 					</a>
 				</div>
 			</div>
