--- a/sub_detail.html
+++ b/sub_detail.html
@@ -58,6 +58,7 @@
 		<div class="randing-sec">
 			<h2>what I do</h2>
 			<P>I creative websites</P>
+			<a href="sub.html" class="btn-classic center">go back<span></span></a>
 		</div>
 	</div>
 	<div class="section fp-auto-height" id="section1">
@@ -76,7 +77,7 @@
 			<div class="sub-detail-txt sub-bg03">
 				<h2>Role & Result</h2>
 				<P class="sub-txt">비표준 사이트 웹표준 코딩(HTML/CSS)으로 리뉴얼</P>
-				<P class="sub-txt">학습 사이트로 테이블 코딩 형식이 많았고 의미에 맞지 않는 마크업인 경우가 많았습니다. 웹 접근성을 고려해서 의미있는 마크업을 구성하고 잘 모르는 부분은 웹 접근성 연구소에 문의도 하고, 웹 접근성 인증 마크를 얻은 사이트를 참조해 비표준코딩 사이트를 웹 접근성에 맞추어 완벽하게 리뉴얼 성공했습니다.</P>
+				<P class="sub-txt">학습 사이트로 테이블 코딩 형식이 많았고 의미에 맞지 않는 마크업인 경우가 많았습니다. 웹 접근성을 고려해서 의미 있는 마크업을 구성하고 잘 모르는 부분은 웹 접근성 연구소에 문의도 하고, 웹 접근성 인증 마크를 얻은 사이트를 참조해 비표준코딩 사이트를 웹 접근성에 맞추어 완벽하게 리뉴얼 성공했습니다.</P>
 				<a href="http://www.megaenglish.net/" class="btn-classic center">go site<span></span></a>
 			</div>
 		</div>
