--- a/sub_detail02.html
+++ b/sub_detail02.html
@@ -58,6 +58,7 @@
 		<div class="randing-sec">
 			<h2>what I do</h2>
 			<P>I creative websites</P>
+			<a href="sub.html" class="btn-classic center">go back<span></span></a>
 		</div>
 	</div>
 	<div class="section fp-auto-height" id="section1">
@@ -76,7 +77,7 @@
 			<div class="sub-detail-txt sub-bg03">
 				<h2>Role & Result</h2>
 				<P class="sub-txt">삼성카드 채널지원팀 에서 퍼블리싱 운영지원</P>
-				<P class="sub-txt">기획팀과 디자인 팀들과의 엄무협업을 경험하였고 데이터를 백업하는 삼성SDS 화재로 삼성카드 사이트 접속이 원할하지 않은 일이 있었는데 긴급투입해 밤을새며 사이트가 복구될떄까지 대처했던 경험이 있습니다. 이러한 경험이 긴급한 상황에서도 대처할 수 있는 능력을 키웠습니다.</P>
+				<P class="sub-txt">기획팀과 디자인 팀들과의 업무협업을 경험하였고 데이터를 백업하는 삼성SDS 화재로 삼성카드 사이트 접속이 원활하지 않은 일이 있었는데 긴급히 투입해 밤을 새우며 사이트가 복구될 때까지 대처했던 경험이 있습니다. 이러한 경험이 긴급한 상황에서도 대처할 수 있는 능력을 키웠습니다.</P>
 				<a href="#" class="btn-classic center">go site<span></span></a>
 			</div>
 		</div>
