--- a/sub_detail03.html
+++ b/sub_detail03.html
@@ -58,6 +58,7 @@
 		<div class="randing-sec">
 			<h2>what I do</h2>
 			<P>I creative websites</P>
+			<a href="sub.html" class="btn-classic center">go back<span></span></a>
 		</div>
 	</div>
 	<div class="section fp-auto-height" id="section1">
@@ -76,7 +77,7 @@
 			<div class="sub-detail-txt sub-bg03">
 				<h2>Role & Result</h2>
 				<P class="sub-txt">KT.com 리뉴얼 을 위한 퍼블리싱 지원</P>
-				<P class="sub-txt">주로 서브 상세페이지들을 작업했고 일부는 서부 메인작업도 했습니다. 사파리 포함 크로스 브라우징을 해야했으며, 웹 접근성 마크를 얻기 위해 웹 접근성도 고려 했습니다. 생각보다 작업량이 많아서 각 카테고리별 작업을 진행하며 먼저 완료한 순으로 남은 작업을 서포트 했습니다. 휴일도 반납하고 마무리 작업에 신경을 많이 썻는데 정성을 드린 것 만큼 2018 레드닷어워드 에서 디자인상을 수상해 뜻깊은 프로젝트 였습니다.</P>
+				<P class="sub-txt">주로 서브 상세페이지들을 작업했고 일부는 서부 메인 작업도 했습니다. 사파리 포함 크로스 브라우징을 해야 했으며, 웹 접근성 마크를 얻기 위해 웹 접근성도 고려했습니다. 생각보다 작업량이 많아서 각 카테고리별 작업을 진행하며 먼저 완료한 순으로 남은 작업을 지원했습니다. 휴일도 반납하고 마무리 작업에 신경을 많이 썼는데 정성을 들인 것만큼 2017 WEB AWARD KOREA 에서 생활브랜드부문 통합대상을 받아 뜻깊은 프로젝트였습니다.</P>
 				<a href="https://www.kt.com/" class="btn-classic center">go site<span></span></a>
 			</div>
 		</div>
