--- a/sub_detail04.html
+++ b/sub_detail04.html
@@ -58,6 +58,7 @@
 		<div class="randing-sec">
 			<h2>what I do</h2>
 			<P>I creative websites</P>
+			<a href="sub.html" class="btn-classic center">go back<span></span></a>
 		</div>
 	</div>
 	<div class="section fp-auto-height" id="section1">
@@ -76,7 +77,7 @@
 			<div class="sub-detail-txt sub-bg03">
 				<h2>Role & Result</h2>
 				<P class="sub-txt">Ericsson LG 사내 메신저 개발을 위한 react native 를 활용한 화면 개발</P>
-				<P class="sub-txt">기존 HTML 과 CSS 를 활용한 웹 페이지 작업이아닌 react native code 를 활용한 작업을 해야했고 주위에도 react native 경험이 전무하여 study 와 실무를 병행해야했습니다. android 와 ios 에서 각기 다르게 화면에 보여주는 경우가 잦아서 이를 해결하기 위해 search 와 test 를 수없이 해야했습니다. 각 해상도 별로 디자인을 반영하는게 쉽지않았지만 개발팀과 협업을 통해 잘 마무리 할수 있었습니다.</P>
+				<P class="sub-txt">기존 HTML과 CSS를 활용한 웹 페이지 작업이 아닌 react native code를 활용한 작업을 해야 했고 주위에도 react native 경험이 없어 study와 실무를 병행해야 했습니다. android와 IOS에서 각기 다르게 화면에 보여주는 경우가 잦아서 이를 해결하기 위해 search와 test를 수없이 해야 했습니다. 각 해상도 별로 디자인을 반영하는 게 쉽지 않았지만, 개발팀과 협업을 통해 잘 마무리 했습니다.</P>
 				<a href="#" class="btn-classic center">go site<span></span></a>
 			</div>
 		</div>
