--- a/sub_detail05.html
+++ b/sub_detail05.html
@@ -58,6 +58,7 @@
 		<div class="randing-sec">
 			<h2>what I do</h2>
 			<P>I creative websites</P>
+			<a href="sub.html" class="btn-classic center">go back<span></span></a>
 		</div>
 	</div>
 	<div class="section fp-auto-height" id="section1">
@@ -76,7 +77,7 @@
 			<div class="sub-detail-txt sub-bg03">
 				<h2>Role & Result</h2>
 				<P class="sub-txt">신규 업데이트 내용 반영 및 오류사항 수정</P>
-				<P class="sub-txt">모바일,PC 버전으로 2달에 한번 새로운 내용이 업데이트 되며 반영후 오류사항을 수정 하는 작업을 진행하였고 화면 레이아웃 과 디자인을 수정하는 리뉴얼 작업을 1번 진행했습니다. 방문자가 많은 사이트는 아니지만 구글 에널리틱스로 방문자수를 체크했으며 업데이트 내용을 전달함에 있어 오류사항을 최소화 하는데 중점을두고 작업했습니다.</P>
+				<P class="sub-txt">모바일, PC 버전으로 2달에 한 번 새로운 내용이 업데이트되며 반영 후 오류 사항을 수정하는 작업을 진행하였고 화면 레이아웃 과 디자인을 수정하는 리뉴얼 작업을 1번 진행했습니다. 방문자가 많은 사이트는 아니지만, 구글 애널리틱스로 방문자 수를 체크했으며 업데이트 내용을 전달함에 있어 오류 사항을 최소화하는데 중점을두고 작업했습니다.</P>
 				<a href="https://www.museum.go.kr/site/main/home#" class="btn-classic center">go site<span></span></a>
 			</div>
 		</div>
