--- a/sub_detail06.html
+++ b/sub_detail06.html
@@ -58,6 +58,7 @@
 		<div class="randing-sec">
 			<h2>what I do</h2>
 			<P>I creative websites</P>
+			<a href="sub.html" class="btn-classic center">go back<span></span></a>
 		</div>
 	</div>
 	<div class="section fp-auto-height" id="section1">
@@ -76,7 +77,7 @@
 			<div class="sub-detail-txt sub-bg03">
 				<h2>Role & Result</h2>
 				<P class="sub-txt">LG 사내 전산시스템을 개발 했습니다.</P>
-				<P class="sub-txt">개발은 react 를 활용해 개발하였고 화면구성은 HTML 과 CSS 를 활용했습니다. HTML을 개발 화면에 적용한후 틀어지는 부분은 readct 개발 서버로 접속해서 수정 했습니다. 개발 과 현업이 LG 서초 R&D 센터에 상주해 있어 가끔 화면 대응을 위해 단기 파견을 나갔고 프로젝트는 잘 마무리 했습니다.</P>
+				<P class="sub-txt">개발은 react를 활용해 개발하였고 화면구성은 HTML과 CSS를 활용했습니다. HTML을 개발 화면에 적용한 후 틀어지는 부분은 redact 개발 서버로 접속해서 수정했습니다. 개발과 현업이 LG 서초 R&D 센터에 상주해 있어 가끔 화면 대응을 위해 단기 파견을 나갔고 프로젝트는 잘 마무리했습니다.</P>
 				<a href="#" class="btn-classic center">go site<span></span></a>
 			</div>
 		</div>
