--- a/sub_detail07.html
+++ b/sub_detail07.html
@@ -58,6 +58,7 @@
 		<div class="randing-sec">
 			<h2>what I do</h2>
 			<P>I creative websites</P>
+			<a href="sub.html" class="btn-classic center">go back<span></span></a>
 		</div>
 	</div>
 	<div class="section fp-auto-height" id="section1">
@@ -76,7 +77,7 @@
 			<div class="sub-detail-txt sub-bg03">
 				<h2>Role & Result</h2>
 				<P class="sub-txt">기존 노후화된 EGSS 사내 사이트를 고도화 작업 했습니다.</P>
-				<P class="sub-txt">메인 및 서브 레이아웃을 모두 교체해야했고 메인레이아웃과 서브상세 패이지들의 전반적인 작업에 참여했습니다. 일부 페이지는 모바일용이 필요해 모바일 작업도 병행하였습니다. 퍼블,디자인,기획은 sk hynix 분당에 위치해 작업을 했으며 개발팀은 sk hynix 이천에서 작업을하고있어서 사내메신저 와 전화를 통해 문의사항을 전달받았으며 가끔은 회의를 위해 이천에 방문도 했습니다. 일정이 빠듯한 상황이였고 기획 수정이 잦아서 개발과의 일정을 맞추는게 쉽지않았지만 개발과의 협의를 통해 일정에 맞추어 잘 마무리할수 있었습니다.</P>
+				<P class="sub-txt">메인 및 서브 레이아웃을 모두 교체해야 했고 메인레이아웃과 서브 상세 페이지들의 전반적인 작업에 참여했습니다. 일부 페이지는 모바일용이 필요해 모바일 작업도 병행하였습니다. 퍼블, 디자인, 기획은 sk hynix 분당에 위치해 작업했으며 개발팀은 sk hynix 이천에서 작업하고 있어서 사내메신저 와 전화로 문의사항을 전달받았으며 가끔은 회의를 위해 이천에 방문도 했습니다. 일정이 빠듯한 상황이었고 기획 수정이 잦아서 개발과의 일정을 맞추는 게 쉽지 않았지만, 개발과의 협의를 통해 일정에 맞추어 잘 마무리할수 있었습니다.</P>
 				<a href="#" class="btn-classic center">go site<span></span></a>
 			</div>
 		</div>
