--- a/sub_detail08.html
+++ b/sub_detail08.html
@@ -58,6 +58,7 @@
 		<div class="randing-sec">
 			<h2>what I do</h2>
 			<P>I creative websites</P>
+			<a href="sub.html" class="btn-classic center">go back<span></span></a>
 		</div>
 	</div>
 	<div class="section fp-auto-height" id="section1">
@@ -76,7 +77,7 @@
 			<div class="sub-detail-txt sub-bg03">
 				<h2>Role & Result</h2>
 				<P class="sub-txt">WordPress divi theme 를 활용 반응형사이트를 개발했습니다. 접근성관련 작업도 병행해서 진행했습니다.</P>
-				<P class="sub-txt">퍼블 담당을 맡아 혼자 진행했습니다. WordPress 자체도 무거운 편인데 divi라는 테마를 설치하니 이미지와 pluin을 조금만 설치해도 상당히 로딩속도가 느려지는 현상이있어 최대한 pluin을 줄일수 있는 방안으로 작업을 진행하였고 WordPress 가 접근성을 어느부분까지 지켜주는지 확인해가면서 작업을 진행했고 잘 마무리 할수 있었습니다.</P>
+				<P class="sub-txt">WordPress 자체도 무거운 편인데 Divi 라는 테마를 설치하니 이미지와 pluin을 조금만 설치해도 상당히 로딩속도가 느려지는 현상이 있어 최대한 pluin을 줄이는 방안으로 작업을 진행하였고 WordPress 가 접근성을 어느 부분까지 지켜주는지 확인해가면서 작업을 진행했고 잘 마무리 할 수 있었습니다.</P>
 				<a href="https://swsolutions.lge.com/" class="btn-classic center">go site<span></span></a>
 			</div>
 		</div>
