--- a/sub_detail09.html
+++ b/sub_detail09.html
@@ -58,6 +58,7 @@
 		<div class="randing-sec">
 			<h2>what I do</h2>
 			<P>I creative websites</P>
+			<a href="sub.html" class="btn-classic center">go back<span></span></a>
 		</div>
 	</div>
 	<div class="section fp-auto-height" id="section1">
@@ -76,7 +77,7 @@
 			<div class="sub-detail-txt sub-bg03">
 				<h2>Role & Result</h2>
 				<P class="sub-txt">세탁기 테스트 platform 개발했습니다.</P>
-				<P class="sub-txt">웹페이지 개발으로 gulp 활용해 scss 로 작업을 진행했으며, mixin 을 활용하여 수정하는데 있어 효율성을 높혔습니다.</P>
+				<P class="sub-txt">웹페이지 개발으로 gulp 활용해 scss 로 작업을 진행했으며, mixin 을 활용하여 수정하는데 있어 효율성을 높였습니다.</P>
 				<a href="https://swsolutions.lge.com/" class="btn-classic center">go site<span></span></a>
 			</div>
 		</div>
