--- a/sub_detail10.html
+++ b/sub_detail10.html
@@ -58,6 +58,7 @@
 		<div class="randing-sec">
 			<h2>what I do</h2>
 			<P>I creative websites</P>
+			<a href="sub.html" class="btn-classic center">go back<span></span></a>
 		</div>
 	</div>
 	<div class="section fp-auto-height" id="section1">
@@ -76,7 +77,7 @@
 			<div class="sub-detail-txt sub-bg03">
 				<h2>Role & Result</h2>
 				<P class="sub-txt">Btv Plus 모바일 화면을 구축 했습니다.</P>
-				<P class="sub-txt">각파트별로 담당을 맡아 mobile web 으로 화면을 개발 했습니다. gulp 를 활용해서 scss 로 작업하였고 mixin 을 활용하여 수정하는데 있어 효율성을 높혔습니다. zeplin 으로 디자인을 전달 받아 사용했습니다.</P>
+				<P class="sub-txt">각 파트별로 담당을 맡아 mobile web으로 화면을 개발했습니다. gulp를 활용해서 scss 로 작업하였고 mixin 을 활용하여 수정하는 데 있어 효율성을 높였습니다. zeplin 으로 디자인을 전달받아 사용했습니다.</P>
 				<a href="#" class="btn-classic center">go site<span></span></a>
 			</div>
 		</div>
