--- a/sub_detail11.html
+++ b/sub_detail11.html
@@ -58,6 +58,7 @@
 		<div class="randing-sec">
 			<h2>what I do</h2>
 			<P>I creative websites</P>
+			<a href="sub.html" class="btn-classic center">go back<span></span></a>
 		</div>
 	</div>
 	<div class="section fp-auto-height" id="section1">
@@ -69,14 +70,14 @@
 			</div>
 			<div class="sub-detail-txt sub-bg02">
 				<h2>Project Period</h2>
-				<P class="sub-txt">2020년 4월 ~ 2020년 5월(2개월)</P>
+				<P class="sub-txt">2020년 4월 ~ 2020년 6월(3개월)</P>
 			</div>
 			<div class="sub-detail-img lgm02"></div>
 			<div class="sub-detail-img lgm03"></div>
 			<div class="sub-detail-txt sub-bg03">
 				<h2>Role & Result</h2>
 				<P class="sub-txt">LG 모니터 화면검사 자동화 사스템을 개발 했습니다.</P>
-				<P class="sub-txt">웹페이지 개발으로 gulp 활용해 scss 로 작업을 진행했으며, mixin 을 활용하여 수정하는데 있어 효율성을 높혔습니다. git 을 이용해서 개발한 페이지를 개발자와 공유하며 프로젝트 진행했습니다.</P>
+				<P class="sub-txt">웹페이지 개발로 gulp 활용해 scss 로 작업을 진행했으며, mixin 을 활용하여 수정하는 데 있어 효율성을 높였습니다. git을 이용해서 개발한 페이지를 개발자와 공유하며 프로젝트 진행했습니다.</P>
 				<a href="#" class="btn-classic center">go site<span></span></a>
 			</div>
 		</div>
