--- a/assets/html/sub_detail08.html
+++ b/assets/html/sub_detail08.html
@@ -13,7 +13,7 @@
 	<meta property="og:image"              content="" />
 	<!-- //end open graph	-->
 	<title>김진욱 포트폴리오</title>
-
+	<link rel="icon" type="image/png" sizes="32x32" href="../img/icon-favi.png">
 	<link rel="stylesheet" type="text/css" href="../css/jquery.fullpage.min.css" />
 	<link rel="stylesheet" type="text/css" href="../css/example.css" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css" />
