--- a/assets/html/maket.html
+++ b/assets/html/maket.html
@@ -150,8 +150,8 @@
             .newyear-wrap .newyear-content .checks.new-cont {width:68%;}
             .newyear-wrap .newyear-content .tit {width:32%;}
             .newyear-wrap .newyear-content .new-cont {width:68%;}
-            .newyear-content .checks input[type="radio"] + label:before {top:-5px; width:21px; height:21px;}
-            .newyear-content .checks input[type="radio"]:checked + label:after {top:0px; left:5px; width:12px; height:12px;}
+            .newyear-content .checks input[type="radio"] + label:before {top:-5px; width:1.4rem; height:1.4rem;}
+            .newyear-content .checks input[type="radio"]:checked + label:after {top:0px; left:5px; width:0.8rem; height:0.8rem;}
             .newyear-content .checks input[type="radio"] + label {padding-left:2rem; font-size:0.95rem;}
             .newyear-wrap .newyear-content .checks div {padding-right:0.93rem;}
             .newyear-wrap .newyear-content .checks div:last-child {padding-right:0;}
