--- a/assets/html/maket.html
+++ b/assets/html/maket.html
@@ -140,6 +140,7 @@
         .newyear-wrap .newyear-content.time .time {width:100%}
         .newyear-wrap .newyear-content.time .time select {height:5.33rem; width:100%; font-size:1.4rem; padding-left:2rem;}
         .newyear-wrap .btn-area {width:36.07rem; margin:0 auto;}
+        .newyear-wrap .notice-area {background:#414446;}
         /* media query */
         @media screen and (max-width: 475px) {
             .newyear-wrap {max-width:100%;}
@@ -303,7 +304,7 @@
                     <a href="#"><img src="../img/market/img_btn_01.gif" alt="2021 운세 보러가기"></a>
                     <a href="#"><img src="../img/market/img_btn_02.gif" alt="친구에게 소문내기"></a>
                 </div>
-                <div><img src="../img/market/img_noti02.png" alt="주의사항"></div>
+                <div class="notice-area"><img src="../img/market/img_noti02.png" alt="주의사항"></div>
             </div>
         </div>
         <!-- //market 85 -->
