--- a/assets/html/maket.html
+++ b/assets/html/maket.html
@@ -207,11 +207,11 @@
             background: #fafafa;
             border: 1px solid #cacece;
             border-radius: 100%;
-            box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05), inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05);
+            /*box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05), inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05);*/
         }
 
         .checks input[type="radio"] + label:active:before, .checks input[type="radio"]:checked + label:active:before {
-            box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px 1px 3px rgba(0, 0, 0, 0.1);
+            /*box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px 1px 3px rgba(0, 0, 0, 0.1);*/
         }
 
         .checks input[type="radio"]:checked + label:before {
@@ -228,7 +228,7 @@
             height: 20px;
             background: #000;
             border-radius: 100%;
-            box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 0.3);
+           /* box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 0.3);*/
         }
     </style>
 </head>
