--- a/assets/html/maket.html
+++ b/assets/html/maket.html
@@ -401,7 +401,7 @@
         </div>
         <!-- //market 85 -->
         <!-- 팝업 -->
-        <div class="pop-container" style="display: block;">
+        <div class="pop-container">
             <div class="pop-inner">
                 <div class="pop-contents">
                     <div class="pop-top"></div>
