--- a/assets/html/maket.html
+++ b/assets/html/maket.html
@@ -167,8 +167,8 @@
         .pop-container {display:none; position:fixed; left:0; top:0; width:100vw; height:100vh; background-color:rgba(0, 0, 0,0.6); z-index:150; overflow-y: scroll;}
         .pop-container .pop-inner {position:relative; width:720px; padding:2.17rem 2.66rem 4.17rem; margin:0 auto;}
         .pop-container .pop-inner a {display:inline-block;}
-        .pop-container .pop-inner .btn-close {position:absolute; right:3.73rem; top:4rem; width:1.73rem; height:1.73rem; background:url(../images/icon_close.png) no-repeat 0 0; background-size:100%; text-indent:-9999px;}
-        .pop-container .pop-inner .pop-top {width:100%; height:10px; background:url(../images/bg_top.png) no-repeat 0 0; background-size:100%;}
+        .pop-container .pop-inner .btn-close {position:absolute; right:3.73rem; top:4rem; width:1.73rem; height:1.73rem; background:url(../img/market/icon_close.png) no-repeat 0 0; background-size:100%; text-indent:-9999px;}
+        .pop-container .pop-inner .pop-top {width:100%; height:10px; background:url(../img/market/bg_top.png) no-repeat 0 0; background-size:100%;}
         .pop-container .pop-contents {background: #fff;}
         .pop-container .pop-contents img {width:100%;}
         .pop-container .pop-contents .tit-name {padding-top:4.8rem; font-size:2.26rem; text-align:center;}
@@ -188,18 +188,18 @@
         .pop-container .head-img .number span {font-size:3.2rem;}
         .pop-container .text-area {padding-top:1rem; padding-bottom:4rem; font-size: 1.33rem; color: #333; line-height: 2.13rem; text-align: left;}
         .pop-container .sub-tit-area {width:100%; height:5.33rem; }
-        .pop-container .conts01 .sub-tit-area {background:url("../images/img_sub_tit01.png") no-repeat 0 0; background-size:100%;}
-        .pop-container .conts01 .sub-tit-area.sub02 {background:url("../images/img_sub_tit02.png") no-repeat 0 0; background-size:100%;}
-        .pop-container .conts01  .sub-tit-area.sub03 {background:url("../images/img_sub_tit03.png") no-repeat 0 0; background-size:100%;}
-        .pop-container .conts01  .sub-tit-area.sub04 {background:url("../images/img_sub_tit04.png") no-repeat 0 0; background-size:100%;}
-        .pop-container .conts02 .sub-tit-area {background:url("../images/img_sub_tit05.png") no-repeat 0 0; background-size:100%;}
-        .pop-container .conts02 .sub-tit-area.sub02 {background:url("../images/img_sub_tit06.png") no-repeat 0 0; background-size:100%;}
-        .pop-container .conts02  .sub-tit-area.sub03 {background:url("../images/img_sub_tit07.png") no-repeat 0 0; background-size:100%;}
-        .pop-container .conts02  .sub-tit-area.sub04 {background:url("../images/img_sub_tit08.png") no-repeat 0 0; background-size:100%;}
-        .pop-container .conts02  .sub-tit-area.sub05 {background:url("../images/img_sub_tit09.png") no-repeat 0 0; background-size:100%;}
-        .pop-container .conts03 .sub-tit-area {background:url("../images/img_sub_tit10.png") no-repeat 0 0; background-size:100%;}
-        .pop-container .conts03 .sub-tit-area.sub02 {background:url("../images/img_sub_tit11.png") no-repeat 0 0; background-size:100%;}
-        .pop-container .conts03  .sub-tit-area.sub03 {background:url("../images/img_sub_tit11.png") no-repeat 0 0; background-size:100%;}
+        .pop-container .conts01 .sub-tit-area {background:url("../img/market/img_sub_tit01.png") no-repeat 0 0; background-size:100%;}
+        .pop-container .conts01 .sub-tit-area.sub02 {background:url("../img/market/img_sub_tit02.png") no-repeat 0 0; background-size:100%;}
+        .pop-container .conts01  .sub-tit-area.sub03 {background:url("../img/market/img_sub_tit03.png") no-repeat 0 0; background-size:100%;}
+        .pop-container .conts01  .sub-tit-area.sub04 {background:url("../img/market/img_sub_tit04.png") no-repeat 0 0; background-size:100%;}
+        .pop-container .conts02 .sub-tit-area {background:url("../img/market/img_sub_tit05.png") no-repeat 0 0; background-size:100%;}
+        .pop-container .conts02 .sub-tit-area.sub02 {background:url("../img/market/img_sub_tit06.png") no-repeat 0 0; background-size:100%;}
+        .pop-container .conts02  .sub-tit-area.sub03 {background:url("../img/market/img_sub_tit07.png") no-repeat 0 0; background-size:100%;}
+        .pop-container .conts02  .sub-tit-area.sub04 {background:url("../img/market/img_sub_tit08.png") no-repeat 0 0; background-size:100%;}
+        .pop-container .conts02  .sub-tit-area.sub05 {background:url("../img/market/img_sub_tit09.png") no-repeat 0 0; background-size:100%;}
+        .pop-container .conts03 .sub-tit-area {background:url("../img/market/img_sub_tit10.png") no-repeat 0 0; background-size:100%;}
+        .pop-container .conts03 .sub-tit-area.sub02 {background:url("../img/market/img_sub_tit11.png") no-repeat 0 0; background-size:100%;}
+        .pop-container .conts03  .sub-tit-area.sub03 {background:url("../img/market/img_sub_tit11.png") no-repeat 0 0; background-size:100%;}
         .pop-container .conts03 .num-area {position:relative;}
         .pop-container .conts03 .num-area .num {position:absolute; left:50%; top:45%; transform:translate(-50%,0); font-size:2.53rem; color:#222; font-weight:bold;}
         .pop-container .conts03 .num-area .num span {font-size:2.3rem;}
@@ -335,17 +335,17 @@
     <div id="content-container">
         <!-- market 85 -->
         <div class="newyear-wrap">
-            <h2 class="tit"><img src="../images/img_tit.gif" alt="대박나이스 2021년 신녀운세"></h2>
+            <h2 class="tit"><img src="../img/market/img_tit.gif" alt="대박나이스 2021년 신녀운세"></h2>
             <div class="info-container">
                 <!-- 이름 -->
                 <div class="newyear-content name">
-                    <div class="tit"><img src="../images/img_name.gif" alt="이름"></div>
+                    <div class="tit"><img src="../img/market/img_name.gif" alt="이름"></div>
                     <div class="input new-cont"><input type="text"></div>
                 </div>
-                <div><img src="../images/img_bg.gif" alt="bg"></div>
+                <div><img src="../img/market/img_bg.gif" alt="bg"></div>
                 <!-- 성별 -->
                 <div class="newyear-content">
-                    <div class="tit"><img src="../images/img_sex.gif" alt="성별"></div>
+                    <div class="tit"><img src="../img/market/img_sex.gif" alt="성별"></div>
                     <div class="checks new-cont">
                         <div>
                             <input type="radio" id="women" name="sex" checked><label for="women">여자</label>
@@ -357,7 +357,7 @@
                 </div>
                 <!-- 양력/음력 -->
                 <div class="newyear-content">
-                    <div class="tit"><img src="../images/img_birth.gif" alt="양력/음력"></div>
+                    <div class="tit"><img src="../img/market/img_birth.gif" alt="양력/음력"></div>
                     <div class="checks new-cont">
                         <div>
                             <input type="radio" id="birth01" name="birth" checked><label for="birth01">양력</label>
@@ -372,7 +372,7 @@
                 </div>
                 <!-- 생년월일 -->
                 <div class="newyear-content birth">
-                    <div class="tit"><img src="../images/img_year.gif" alt="생년월일"></div>
+                    <div class="tit"><img src="../img/market/img_year.gif" alt="생년월일"></div>
                     <div class="year new-cont">
                         <div>
                             <input type="text" placeholder="1987" maxlength="4"><span>년</span>
@@ -387,7 +387,7 @@
                 </div>
                 <!-- 출생시간 -->
                 <div class="newyear-content time">
-                    <div class="tit"><img src="../images/img_time.gif" alt="출생시간"></div>
+                    <div class="tit"><img src="../img/market/img_time.gif" alt="출생시간"></div>
                     <div class="time new-cont">
                         <select name="" id="">
                             <option value="">23:00 ~ 23:00</option>
@@ -396,13 +396,13 @@
                         </select>
                     </div>
                 </div>
-                <div><img src="../images/img_noti01.gif" alt="개인정보 주의사항"></div>
+                <div><img src="../img/market/img_noti01.gif" alt="개인정보 주의사항"></div>
                 <div class="btn-area">
                     <!-- btn-enter 클릭시 popup 노출 -->
-                    <a href="#" class="btn-enter"><img src="../images/img_btn_01.gif" alt="2021 운세 보러가기"></a>
-                    <a href="#"><img src="../images/img_btn_02.gif" alt="친구에게 소문내기"></a>
+                    <a href="#" class="btn-enter"><img src="../img/market/img_btn_01.gif" alt="2021 운세 보러가기"></a>
+                    <a href="#"><img src="../img/market/img_btn_02.gif" alt="친구에게 소문내기"></a>
                 </div>
-                <div class="notice-area"><img src="../images/img_noti02.png" alt="주의사항"></div>
+                <div class="notice-area"><img src="../img/market/img_noti02.png" alt="주의사항"></div>
             </div>
         </div>
         <!-- //market 85 -->
@@ -423,7 +423,7 @@
                             <!-- 총운 -->
                             <div class="conts conts01">
                                 <div class="head-img">
-                                    <img src="../images/img_tit_head01.png" alt="2021년 운세를 펼쳐 보겠소">
+                                    <img src="../img/market/img_tit_head01.png" alt="2021년 운세를 펼쳐 보겠소">
                                     <div class="number">95<span>점</span></div>
                                 </div>
                                 <!-- 2021 총운 -->
@@ -434,7 +434,7 @@
                                 <!-- 복을 부르는 키 포인트 -->
                                 <div>
                                     <div class="sub-tit-area sub02"></div>
-                                    <img src="../images/img_item01.png" alt="복 조리 아이템">
+                                    <img src="../img/market/img_item01.png" alt="복 조리 아이템">
                                     <div class="text-area">천년 비기로 당신의 운명을 바꾼다.올해의 기운을 잘 활용하여 뜻한 바가 있다면 이루어야 하는 해입니다.</div>
                                 </div>
                                 <!-- 상반기 운세 -->
@@ -449,20 +449,20 @@
                                 </div>
                                 <!-- 버튼 area -->
                                 <div class="btn-wrap">
-                                    <a href="#" class="btn-luck"><img src="../images/img_btn_02.png" alt="운세 다시 보기"></a>
-                                    <a href="#"><img src="../images/img_btn_03.png" alt="친구에게 공유하기"></a>
+                                    <a href="#" class="btn-luck"><img src="../img/market/img_btn_02.png" alt="운세 다시 보기"></a>
+                                    <a href="#"><img src="../img/market/img_btn_03.png" alt="친구에게 공유하기"></a>
                                 </div>
                             </div>
                             <!-- 10대 운 -->
                             <div class="conts conts02">
                                 <div class="head-img">
-                                    <img src="../images/img_tit_head02.png" alt="어디한번 뽑아 보시오">
+                                    <img src="../img/market/img_tit_head02.png" alt="어디한번 뽑아 보시오">
                                 </div>
                                 <!-- 재물&성공운 -->
                                 <div>
                                     <div class="sub-tit-area"></div>
                                     <div class="percent-area">
-                                        <div class="thum"><img src="../images/img_thum01.png" alt="재물&성공"></div>
+                                        <div class="thum"><img src="../img/market/img_thum01.png" alt="재물&성공"></div>
                                         <div class="graph-area">
                                             <div class="graph top">
                                                 <span class="tit">재물</span>
@@ -486,7 +486,7 @@
                                 <div>
                                     <div class="sub-tit-area sub02"></div>
                                     <div class="percent-area">
-                                        <div class="thum"><img src="../images/img_thum02.png" alt="가정&애정"></div>
+                                        <div class="thum"><img src="../img/market/img_thum02.png" alt="가정&애정"></div>
                                         <div class="graph-area">
                                             <div class="graph top">
                                                 <span class="tit">가정</span>
@@ -510,7 +510,7 @@
                                 <div>
                                     <div class="sub-tit-area sub03"></div>
                                     <div class="percent-area">
-                                        <div class="thum"><img src="../images/img_thum03.png" alt="건강&소망"></div>
+                                        <div class="thum"><img src="../img/market/img_thum03.png" alt="건강&소망"></div>
                                         <div class="graph-area">
                                             <div class="graph top">
                                                 <span class="tit">건강</span>
@@ -534,7 +534,7 @@
                                 <div>
                                     <div class="sub-tit-area sub04"></div>
                                     <div class="percent-area">
-                                        <div class="thum"><img src="../images/img_thum04.png" alt="학업&대인"></div>
+                                        <div class="thum"><img src="../img/market/img_thum04.png" alt="학업&대인"></div>
                                         <div class="graph-area">
                                             <div class="graph top">
                                                 <span class="tit">학업</span>
@@ -558,7 +558,7 @@
                                 <div>
                                     <div class="sub-tit-area sub05"></div>
                                     <div class="percent-area">
-                                        <div class="thum"><img src="../images/img_thum05.png" alt="창업&이전"></div>
+                                        <div class="thum"><img src="../img/market/img_thum05.png" alt="창업&이전"></div>
                                         <div class="graph-area">
                                             <div class="graph top">
                                                 <span class="tit">창업</span>
@@ -580,20 +580,20 @@
                                 </div>
                                 <!-- 버튼 area -->
                                 <div class="btn-wrap">
-                                    <a href="#" class="btn-luck"><img src="../images/img_btn_02.png" alt="운세 다시 보기"></a>
-                                    <a href="#"><img src="../images/img_btn_03.png" alt="친구에게 공유하기"></a>
+                                    <a href="#" class="btn-luck"><img src="../img/market/img_btn_02.png" alt="운세 다시 보기"></a>
+                                    <a href="#"><img src="../img/market/img_btn_03.png" alt="친구에게 공유하기"></a>
                                 </div>
                             </div>
                             <!-- 월별운 -->
                             <div class="conts conts03">
                                 <div class="head-img">
-                                    <img src="../images/img_tit_head03.png" alt="대박 나이스">
+                                    <img src="../img/market/img_tit_head03.png" alt="대박 나이스">
                                 </div>
                                 <!-- 1월 운세 -->
                                 <div>
                                     <div class="sub-tit-area"></div>
                                     <div class="num-area">
-                                        <img src="../images/img_thum06.png" alt="운세">
+                                        <img src="../img/market/img_thum06.png" alt="운세">
                                         <span class="num">75<span>점</span></span><!-- 운세 점수 -->
                                     </div>
                                     <div class="text-area">천년 비기로 당신의 운명을 바꾼다.올해의 기운을 잘 활용하여 뜻한 바가 있다면 이루어야 하는 해입니다.</div>
@@ -602,7 +602,7 @@
                                 <div>
                                     <div class="sub-tit-area sub02"></div>
                                     <div class="num-area">
-                                        <img src="../images/img_thum06.png" alt="운세">
+                                        <img src="../img/market/img_thum06.png" alt="운세">
                                         <span class="num">75<span>점</span></span><!-- 운세 점수 -->
                                     </div>
                                     <div class="text-area">천년 비기로 당신의 운명을 바꾼다.올해의 기운을 잘 활용하여 뜻한 바가 있다면 이루어야 하는 해입니다.</div>
@@ -611,15 +611,15 @@
                                 <div>
                                     <div class="sub-tit-area sub03"></div>
                                     <div class="num-area">
-                                        <img src="../images/img_thum06.png" alt="운세">
+                                        <img src="../img/market/img_thum06.png" alt="운세">
                                         <span class="num">75<span>점</span></span><!-- 운세 점수 -->
                                     </div>
                                     <div class="text-area">천년 비기로 당신의 운명을 바꾼다.올해의 기운을 잘 활용하여 뜻한 바가 있다면 이루어야 하는 해입니다.</div>
                                 </div>
                                 <!-- 버튼 area -->
                                 <div class="btn-wrap">
-                                    <a href="#" class="btn-luck"><img src="../images/img_btn_02.png" alt="운세 다시 보기"></a>
-                                    <a href="#"><img src="../images/img_btn_03.png" alt="친구에게 공유하기"></a>
+                                    <a href="#" class="btn-luck"><img src="../img/market/img_btn_02.png" alt="운세 다시 보기"></a>
+                                    <a href="#"><img src="../img/market/img_btn_03.png" alt="친구에게 공유하기"></a>
                                 </div>
                             </div>
                         </div>
