--- a/assets/html/maket.html
+++ b/assets/html/maket.html
@@ -323,7 +323,7 @@
             }
             /* tab conts 높이 */
             var height = $(window).height();
-            var pop_top = $(".pop-top").height() + $(".tit-name").height() + $(".tab-wrap").height();
+            var pop_top = $(".pop-top").height() + $(".tit-name").height() + $(".tab").height();
             var cont_height = height - pop_top;
             $(".tab_con").css("max-height",cont_height);
         });
