--- a/assets/html/maket.html
+++ b/assets/html/maket.html
@@ -322,13 +322,13 @@
                 });
             }
             /* tab conts 높이 */
-            var height = $(document).height();
+            var height = $(window).height();
             console.log(height);
-            var pop_top = $(".pop-top").height() + $(".tit-name").height() + $(".tab").height() + 4.5;
+            var pop_top = $(".pop-top").height() + $(".tit-name").height() + $(".tab").height();
             console.log(pop_top);
-            var cont_height = height - pop_top;
+           /* var cont_height = height - pop_top;
             console.log(cont_height);
-            $(".tab_con").css("max-height",cont_height);
+            $(".tab_con").css("max-height",cont_height);*/
         });
     </script>
 </head>
