--- a/assets/html/maket.html
+++ b/assets/html/maket.html
@@ -261,7 +261,7 @@
             .pop-container .percent-area .graph-area .graph.top {padding-bottom:0.4rem;}
             .pop-container .percent-area {padding:1rem 0 0.5rem;}
             .pop-container .percent-area .graph-area .graph .bar {height:1.66rem; padding-right:0.5rem;}
-            .pop-container .pop-contents .tit-name {padding-top:2.5rem;}
+            .pop-container .pop-contents .tit-name {height:auto; padding-top:2.5rem;}
             .pop-container .pop-inner .btn-close {right:0.73rem; top:1.5rem; width:1.2rem; height:1.2rem;}
         }
         /* max 320 */
