--- a/assets/html/maket.html
+++ b/assets/html/maket.html
@@ -251,6 +251,7 @@
             .pop-container .pop-contents .tit-name span {font-size:1.6rem;}
             .pop-container .tab-wrap {padding:0 1.6rem 2rem; margin-top:2rem;}
             .pop-container .tab-wrap .tab li {padding:1rem; font-size:1.06rem;}
+            .pop-container .tab-wrap .tab {height:3rem;}
             .pop-container .sub-tit-area {height:3rem;}
             .pop-container .conts03 .num-area .num {top:41%; font-size:1.6rem;}
             .pop-container .conts03 .num-area .num span {font-size:1.4rem;}
