--- a/assets/html/maket.html
+++ b/assets/html/maket.html
@@ -325,15 +325,11 @@
             /* tab conts 높이 */
             var height = $(window).height();
             console.log(height);
-            var pop_top = $(".pop-top").height();
+            var pop_top = $(".pop-top").height() + $(".tit-name").height() + $(".tab").height();
             console.log(pop_top);
-            var pop_top2 = + $(".tit-name").height();
-            console.log(pop_top2);
-            var pop_top3 = $(".tab").height();
-            console.log(pop_top3);
-           /* var cont_height = height - pop_top;
+            var cont_height = height - pop_top;
             console.log(cont_height);
-            $(".tab_con").css("max-height",cont_height);*/
+            $(".tab_con").css("max-height",cont_height);
         });
     </script>
 </head>
